Bug 162889 - A11Y sidebar: warning does not disappear when page header is deleted
Summary: A11Y sidebar: warning does not disappear when page header is deleted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2024-09-09 16:50 UTC by Gabor Kelemen (Collabora)
Modified: 2024-10-20 11:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (34.02 KB, application/vnd.oasis.opendocument.text)
2024-09-09 16:50 UTC, Gabor Kelemen (Collabora)
Details
The example file upon opening in the Accessibility sidebar (103.55 KB, image/png)
2024-09-09 16:54 UTC, Gabor Kelemen (Collabora)
Details
The example file after all header content is deleted (34.33 KB, application/vnd.oasis.opendocument.text)
2024-09-09 16:56 UTC, Gabor Kelemen (Collabora)
Details
Adding another empty header to the Landscape style adds one more warning (101.36 KB, image/png)
2024-09-09 17:00 UTC, Gabor Kelemen (Collabora)
Details
Crash when copying with availability check (1.56 MB, video/mp4)
2024-10-18 22:11 UTC, Vladislav Tarakanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-09-09 16:50:37 UTC
Created attachment 196330 [details]
Example file from Writer

Attached example file contains some customized page headers.

When opened, the Accessibility sidebar shows two warnings about empty lines being used for creating space.

These are associated with certain page styles, but even removing the headers associated with those does not entirely make the warnings disappear.

1. Open attached file
2. Open the Accessibility sidebar
-> There are two warnings "Avoid new lines to create space". Clicking them does not lead to anywhere.

3. Open the Styles sidebar, go to the Page Styles category and change the page style from Landscape to Left Page.
4. Delete the contents of the header with the blue pop-up button
5. Change the page style to Default page style
6. Delete the contents of the header with the blue pop-up button again
7. Go back to the Accessibility sidebar
-> There is still one warning "Avoid new lines to create space".
8. Save the file with another name, reload, go to the Accessibility sidebar again
-> No more of these warnings.

Ideally, these warnings should not be shown if the relevant page style is not in use. Also the sidebar should be updated when the header content is deleted.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 10363c80eb3fd0637d91714fe977de77b43d3aa3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2024-09-09 16:54:13 UTC
Created attachment 196331 [details]
The example file upon opening in the Accessibility sidebar

Only one "Avoid newlines to create space" warning, sorry.
Comment 2 Gabor Kelemen (Collabora) 2024-09-09 16:56:31 UTC
Created attachment 196332 [details]
The example file after all header content is deleted

This shows no more warnings, but only after save-reload.
Comment 3 Gabor Kelemen (Collabora) 2024-09-09 17:00:28 UTC
Created attachment 196333 [details]
Adding another empty header to the Landscape style adds one more warning

Not mentioned, but this is how it starts: adding an empty header creates a new warning on the sidebar.

This can be considered fine, but if the user switches to another style and the problematic one is not used anymore, the warning is still displayed, which is confusing.
Comment 4 Commit Notification 2024-09-16 15:09:35 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a7bfe40d0d503c3d51be44e52ca28d50466ca9c

tdf#162889 - A11Y sidebar: fix warning does not disappear when

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-09-17 10:09:59 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/5117c50b31ed1d17d1e151c833ef6959295b67dc

tdf#162889 - A11Y sidebar: fix warning does not disappear when

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Vladislav Tarakanov 2024-10-18 22:11:20 UTC
It looks like the commit 2a7bfe40d0d5 causes LO to crash when trying to copy text from several paragraphs by selecting the text in the first one not from the beginning.

It looks like the problem is in lines like this:
SwWrtShell* pWrtShell = rDocument.GetDocShell()->GetWrtShell();

In the problematic case, rDocument.GetDocShell() returns nullptr, which causes the program to crash when calling GetWrtShell(). Perhaps the code needs an additional check for nullptr, as is done here, a little lower:

SwDocShell* pShell = pDoc->GetDocShell();
  if (!pShell)
    return;
Comment 7 Vladislav Tarakanov 2024-10-18 22:11:51 UTC
Created attachment 197141 [details]
Crash when copying with availability check