tdf#162889 - A11Y sidebar: fix warning does not disappear when

page header is deleted. Check if nodes have contentframe.

Change-Id: Ie7f79cedb577b856d518d23326e9d7ceba2b825c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173215
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>